# tantivy-cache

./: .clippy.toml  Cargo.toml  README.md
src/: error.rs  footer.rs  keys.rs  lib.rs
src/tests/: dir.rs  mod.rs  utils.rs
